[SpecsUtils] Add unit tests and fix *some* discovered bugs